2012-08-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/halconf.h (HAL_USE_SERIAL_USB, HAL_USE_USB): Not define.
	* src/Makefile.in (CSRC): Add sys.c and usb_lld.c
	* src/sys.h, src/sys.c: New files (from Gnuk).
	* src/usb_lld.h, src/usb_lld.c: New files (from Gnuk).

2011-11-14  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.01.

	* src/Makefile.in (MCFLAGS): Override MCFLAGS option for newer
	GCC of summon-arm-toolchain to add -mfix-cortex-m3-ldrd.
	NOTE: This should not be needed (as -mcpu=cortex-m3 defaults
	to -mfix-cortex-m3-ldrd for GCC-proper), but it is needed
	to select arm-none-eabi/lib/thumb2/libc.a correctly.

	* boards/common/board-common.c (__early_init): Revert change of
	2011-10-05.

	* boards/FST_01/{mcuconf.h,board.h,board.c}: New.

	* src/main.c (my_sduRequestsHook): New.
	(LED_ONESHOT_SHORT, LED_ONESHOT_LONG): New.
	(led_blinker): Support LED_ONESHOT_SHORT and LED_ONESHOT_LONG.
	(main): Call neug_prng_reseed for each new connection.

2011-10-07  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c (neug_wait_full): New (from Gnuk).

2011-10-06  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c (neug_flush): New.
	(neug_prng_reseed): Call neug_flush.

2011-10-05  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/common/board-common.c (__early_init): Set MSP register
	in case of DFU.

2011-10-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/chconf.h (THREAD_CONTEXT_SWITCH_HOOK): New.

	* src/Makefile.in: Follow the change of ChibiOS 2.3.3 (new
	directory structure of platforms/STM32F1xx).

	* src/main.c (vcom_configuration_descriptor_data, usb_event):
	Follow the change of ChibiOS 2.3.3 (USB_CDC_*).
	(vcom_string3): Version 0.01.

	* src/configure (MEMORY_SIZE): New.

	* src/neug.ld.in (@MEMORY_SIZE@): New (for HD device like STBEE).
	(.stacks): New in newer ChibiOS (>= 2.3.3).

	* src/random.c (adccb_err): New.
	(adcgrpcfg): Add adccb_err.

	* chibios: Updated to trunk of 2.3.3.

2011-09-27  NIIBE Yutaka  <gniibe@fsij.org>
