@@ -8,21 +8,3 @@
 void boardInit(void)
 {
 }
-
-void
-USB_Cable_Config (int NewState)
-{
-  if (NewState != DISABLE)
-    palClearPad (IOPORT3, GPIOC_DISC);
-  else
-    palSetPad (IOPORT3, GPIOC_DISC);
-}
-
-void
-set_led (int value)
-{
-  if (value)
-    palClearPad (IOPORT3, GPIOC_LED);
-  else
-    palSetPad (IOPORT3, GPIOC_LED);
-}
