@@ -14,21 +14,3 @@ void boardInit(void)
   /* We use LED2 as optional "error" indicator */
   palSetPad (IOPORT1, GPIOA_LED2);
 }
-
-void
-USB_Cable_Config (int NewState)
-{
-  if (NewState != DISABLE)
-    palSetPad (IOPORT1, GPIOA_USB_ENABLE);
-  else
-    palClearPad (IOPORT1, GPIOA_USB_ENABLE);
-}
-
-void
-set_led (int value)
-{
-  if (value)
-    palClearPad (IOPORT1, GPIOA_LED1);
-  else
-    palSetPad (IOPORT1, GPIOA_LED1);
-}
