@@ -56,10 +56,6 @@ const PALConfig pal_default_config =
 void
 __early_init(void)
 {
-#ifdef DFU_SUPPORT
-  SCB->VTOR = 0x08003000;
-#endif
-
   stm32_clock_init();
 }
 
